<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My First Application</string>
    <string name="student_info">Student: Dobrov\nGroup: 3.2.ISaP-1</string>
    <string name="avatar_description">The author\'s avatar</string>
    <string name="menu_description">Menu</string>
    <string name="like_description">Like</string>
    <string name="share_description">Share</string>
    <string name="views_description">Views</string>

    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>

    <string name="post_hint">What you got new?</string>
    <string name="save_post">Publish</string>
    <string name="cancel_edit_hint">Edit…</string>
    <string name="cancel_edit">Cancel</string>
    <string name="add_post">Add post</string>
    <string name="edit_post_title">New post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post_edit_title">Edit post</string>
    <string name="error_empty_content">Text can\'t be empty</string>

    <string name="play_video">Play video</string>
    <string name="open_external">Open in external app</string>
    <string name="error_no_video_app">No app for video</string>
    <string name="error_cannot_open_video">Cannot open video</string>
    <string name="share_post_via">Share via</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_removed">Post removed</string>

</resources>